--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "compass-mixins": "^0.12.10",
         "copy-webpack-plugin": "^4.5.1",
         "css-loader": "^0.28.11",
+        "eslint-config-rallycoding": "^3.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "file-loader": "^1.1.11",
         "node-sass": "^4.9.0",
