--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
     "extends":"rallycoding",
     "globals": {
-        "$": false
+        "$": false,
+        "document": false,
+        "window": false
     }
 }
